// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button gets enabled after adding input 1`] = `
<div
  className="user-form"
>
  <input
    defaultValue="a"
    onChange={[Function]}
    placeholder="github username"
    type="text"
  />
  <button
    disabled={false}
    onClick={[Function]}
  >
    See profile
  </button>
</div>
`;

exports[`Renders with empty input + disabled button 1`] = `
<div
  className="user-form"
>
  <input
    defaultValue=""
    onChange={[Function]}
    placeholder="github username"
    type="text"
  />
  <button
    disabled={true}
    onClick={[Function]}
  >
    See profile
  </button>
</div>
`;
